# fastapi-alchemy-alembic

./: .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.local.yml  main.py  pyproject.toml
alembic/versions/: 05e72ac4aedb_.py  24dc6223b817_.py  2f37e0814ea2_.py
api/: users.py
api/utils/: users.py
db/: db_setup.py
pydantic_schemas/: user.py
