[tool.poetry]
name = "fastapi-alchemy-alembic"
version = "0.1.0"
description = ""
authors = ["coolspawn <coolsapwn@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.78.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
